# smarterlife

./: .gitignore  GCP_DEPLOYMENT_BEST_PRACTICES.md  README.md  cloudbuild.yaml
.claude/: settings.local.json
backend/: Cargo.toml  Dockerfile
backend/src/: auth.rs  db.rs  errors.rs  logic.rs  main.rs  models.rs  openai.rs  state.rs
backend/src/handlers/: ai.rs  meal.rs  mod.rs  summary.rs  user.rs  workout.rs
flutter_app/: .gitignore  README.md  pubspec.yaml
flutter_app/android/app/: build.gradle.kts
flutter_app/ios/Runner/: Info.plist
flutter_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_app/lib/: main.dart  models.dart
flutter_app/lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_zh.dart  app_zh.arb
flutter_app/lib/models/: ai_recommendation_history.dart  daily_records.dart  daily_summary.dart  food_catalog_entry.dart  food_parse_result.dart  llm_recommendation.dart  meal_draft.dart  plan_flow.dart  recommendation_result.dart  user_profile.dart  workout_draft.dart
flutter_app/lib/screens/: add_meal_screen.dart  add_workout_screen.dart  ai_recommendation_detail_screen.dart  ai_recommendation_history_screen.dart  daily_records_screen.dart  home_screen.dart  recommendation_screen.dart  setup_screen.dart  update_weight_screen.dart
flutter_app/lib/services/: api_service.dart  auth_service.dart  session_state.dart  (+1 more)
flutter_app/linux/: CMakeLists.txt
flutter_app/test/: widget_test.dart
flutter_app/web/: index.html  manifest.json
flutter_app/windows/: CMakeLists.txt
scripts/: setup-gcp.sh
(+15 files in other folders)
