[package]
name = "smarterlife-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "=1.0.89"
gcp_auth = "0.12"
axum = "=0.7.5"
chrono = { version = "=0.4.38", features = ["serde"] }
reqwest = { version = "=0.11.27", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "=1.0.210", features = ["derive"] }
serde_json = "=1.0.128"
tokio = { version = "=1.40.0", features = ["full"] }
tower-http = { version = "=0.5.2", features = ["cors", "trace"] }
tracing = "=0.1.40"
tracing-subscriber = { version = "=0.3.18", features = ["env-filter"] }
